# Alphafix

./: README.md  hatch_build.py  pyproject.toml  requirements.txt
src/alphafix/: cli_scripts.py  notes.txt  tools.py
src/cba_tools/: cba_tools.py  cli_scripts.py  notes.txt
test/: 5fdr.inpcrd  5fdr_A2pdb  RestMDTest.ipynb  STI.inpcrd  STI.mol2  STI.prmtop  mesmy.sh
