[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cba_tools"
dynamic = ['version']
description = "Protein MD Simulation Setup Tools for CompBioAsia."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
license-files = ["LICENSE"]
keywords = [
    "compbioasia",
    "protein",
    "molecular dynamics",
    "simulation",
    "setup tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    {name = "Charlie Laughton", email = "charles.laughton@nottingham.ac.uk"}
    ]
dependencies = [
    "numpy",
    "matplotlib",
    "mdtraj",
    "rdkit",
    "crossflow"
]
[project.scripts]
sp_search = "cba_tools.cli_scripts:sp_search_cli"
alpha_check = "cba_tools.cli_scripts:alpha_check_cli"
alpha_fix = "cba_tools.cli_scripts:alpha_fix_cli"
alpha_get = "cba_tools.cli_scripts:alpha_get_cli"
prepare_protein = "cba_tools.cli_scripts:prepare_protein_cli"
make_leap = "cba_tools.cli_scripts:make_leap_cli"
het_param = "cba_tools.cli_scripts:het_param_cli"
rest_min = "cba_tools.cli_scripts:rest_min_cli"
mesmy = "cba_tools.cli_scripts:mesmy_cli"

[tool.hatch.metadata.hooks.custom]
