[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "alphafix"
dynamic = ['version']
description = "Protein MD Simulation Setup Tools for CompBioAsia."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
license-files = ["LICENSE"]
keywords = [
    "protein",
    "molecular dynamics",
    "simulation",
    "setup tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    {name = "Charlie Laughton", email = "charles.laughton@nottingham.ac.uk"}
    ]
dependencies = [
    "numpy",
    "matplotlib",
    "mdtraj",
    "rdkit",
    "openmm",
    "requests",
    "crossflow"
]
[project.scripts]
alpha_check = "alphafix.cli_scripts:alpha_check_cli"
alpha_fix = "alphafix.cli_scripts:alpha_fix_cli"

[tool.hatch.metadata.hooks.custom]
